--- a/planar_kempe/presentation.tex
+++ b/planar_kempe/presentation.tex
@@ -620,6 +620,8 @@
   \begin{block}{Non-collapsable collapsable in at most 3 Kempe changes}
         \centering
         \begin{tikzpicture}
+          \draw (-1.4,-1.4) rectangle (1.4,1.4);
+          \only<2->{
           \node[draw=black,fill=\myorange,circle,inner sep=2pt]   (a) at (0,0) {};
           \node[draw=black,fill=\mydarkblue,circle,inner sep=2pt]   (b) at (0:1cm) {};
           \node[draw=black,fill=\myyellow,circle,inner sep=2pt]   (c) at (60:1cm) {};
@@ -634,13 +636,14 @@
           \draw (e) -- (a);
           \draw (f) -- (a);
           \draw (g) -- (a);
-          \draw[dashed] (b) -- (c) -- (d) -- (e) -- (f) -- (g) -- (b);
-          \fill[\myyellow,rounded corners=2mm,opacity=0.5]  ($(c) +(345:.3cm)$) --
-          ($(c)+(75:.3cm)$) -- ($(e) + (165:.3cm)$) -- ($(e) + (255:.3cm)$) -- cycle;
+          \draw[dashed] (b) -- (c) -- (d) -- (e) -- (f) -- (g) -- (b);}
+          \only<2>{\fill[\myyellow,rounded corners=2mm,opacity=0.5]  ($(c) +(345:.3cm)$) --
+          ($(c)+(75:.3cm)$) -- ($(e) + (165:.3cm)$) -- ($(e) + (255:.3cm)$) -- cycle;}
 
-          \fill[\myblue,rounded corners=2mm,opacity=0.5] ($(d) +(45:.3cm)$) --
-          ($(d)+(135:.3cm)$) -- ($(f) + (225:.3cm)$) -- ($(f) + (315:.3cm)$) -- cycle;
+          \only<2>{\fill[\myblue,rounded corners=2mm,opacity=0.5] ($(d) +(45:.3cm)$) --
+          ($(d)+(135:.3cm)$) -- ($(f) + (225:.3cm)$) -- ($(f) + (315:.3cm)$) -- cycle;}
 
+          
         \end{tikzpicture}        
 
   \end{block}
