--- a/poster_journee_EDMI/main.tex
+++ b/poster_journee_EDMI/main.tex
@@ -5,47 +5,146 @@
 \def\pteam{Graphe et Optimisation, Combinatoire et Interactions} % Team
 \def\pinstitute{Univ. Bordeaux, LaBRI, France} % Affiliation
 \def\pdate{Thursday April 6, 2023} % Date
-\inriatrue % inriatrue/inriafalse to enable/disable Inria logo
+\inriafalse % inriatrue/inriafalse to enable/disable Inria logo
+
 
 \input{boilerplateSDSLaBRI}
 
 \graphicspath{{./fig/}} % Figures and logos directory
 \setlength{\columnheight}{588ex} % Tweak this value if columns are too long/short (should be okay with 588ex)
 
+\usepackage{BeamerColor}
+\usepackage{tikz}
+
+%%%%%%%%% Colors of Beamer Layout %%%%%%%%%%%%%
 \begin{document}
 \begin{frame}
+\begin{columns}
+\begin{column}{.49\textwidth}
+\begin{beamercolorbox}[center,wd=\textwidth]{postercolumn}
+\begin{minipage}[T]{.95\textwidth}
+\parbox[t][\columnheight]{\textwidth}{
+
+\begin{block}{Graph coloring}
+\begin{columns}
+\begin{column}{.49\textwidth}
+
+  \centering
+  \pgfdeclarelayer{background}
+  \pgfdeclarelayer{foreground}
+  \pgfsetlayers{background,main,foreground}
+  \begin{tikzpicture}
+
+  \begin{pgfonlayer}{background} 
+  \clip (-5,5) rectangle (5,-5);
+  \draw[fill=yellow]  (0,0) -- (126:10cm) -- (198:10cm) -- cycle; 
+  \draw[fill=rougeLaBRI]  (0,0) -- (198:10cm) -- (270:10cm) -- cycle;
+  \draw[fill=bleuLaBRI]  (0,0) -- (270:10cm) -- (342:10cm) -- cycle;
+  \draw[fill=yellow]  (0,0) -- (342:10cm) -- (54:10cm) -- cycle;
+  \draw[fill=orange]  (0,0) -- (54:10cm) -- (126:10cm) -- cycle;
+  \end{pgfonlayer}
+
+  \begin{scope}[shift={(0,.75)}]
+  \draw[fill=bleuLaBRI] (0,0) -- (45:3cm) -- (135:3cm) -- (0,0); 
+  \draw[fill=orange] (0,0) -- (135:3cm) -- (225:3cm)-- (-90:2.12cm) -- (0,0); 
+  \draw[fill=rougeLaBRI] (0,0) -- (-90:2.12cm) -- (315:3cm) -- (45:3cm) -- (0,0); 
+  \end{scope}
+  
+  \begin{pgfonlayer}{foreground}
+  \draw[fill=yellow] (0,-1.37) circle (1cm);
+  \end{pgfonlayer}
+  \end{tikzpicture}
+  \end{column}
+  \begin{column}{.49\textwidth}
+
+  \centering
+  \begin{tikzpicture}    
+  \clip (-5,5) rectangle (5,-5);
+  \node[draw=black,fill=orange,circle,inner sep=5pt]   (a) at (90:4cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=5pt]  (b) at (162:4cm) {};
+  \node[draw=black,fill=rougeLaBRI,circle,inner sep=5pt] (c) at (234:4cm) {};
+  \node[draw=black,fill=bleuLaBRI,circle,inner sep=5pt] (d) at (306:4cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=5pt] (e) at (18:4cm) {};
+
+  \node[draw=black,fill=bleuLaBRI,circle,inner sep=5pt]   (f) at (90:1.7cm) {};
+  \node[draw=black,fill=orange,circle,inner sep=5pt]  (g) at (180:1.7cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=5pt] (h) at (270:1.7cm) {};
+  \node[draw=black,fill=rougeLaBRI,circle,inner sep=5pt] (i) at (0:1.7cm) {};
+
+  \draw (a) -- (b) -- (c) -- (d) -- (e) -- (a);
+  \draw (f) -- (a)  (g) -- (b)  (i) -- (e);
+  \draw (g) -- (i) -- (d) -- (h) -- (c) -- (g) -- (f) -- (i) -- (h) -- (g);
+  \end{tikzpicture}
+  \end{column}
+  \end{columns}
+  \vspace{1cm}
+  [Apple, Haken 1989] Every planar map (or graph) is 4-colorable
+\end{block}
+            
+            \vfill
+            
+            \begin{block}{Kempe change}
+            
+            \centering
   \begin{columns}
-    \begin{column}{.49\textwidth}
-      \begin{beamercolorbox}[center,wd=\textwidth]{postercolumn}
-        \begin{minipage}[T]{.95\textwidth}
-          \parbox[t][\columnheight]{\textwidth}{
-            
-            \begin{block}{Video content consumption}
-            
-            \centering
-            
-            \includegraphics[width=.925\textwidth]{sample/cisco-vni-2021.png}            
+  \begin{column}{.49\textwidth}
+  \centering
+  \begin{tikzpicture}    
+  \clip (-5,5) rectangle (5,-5);
+  \node[draw=black,fill=orange,circle,inner sep=5pt]   (a) at (90:4cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=5pt]  (b) at (162:4cm) {};
+  \node[draw=black,fill=rougeLaBRI,circle,inner sep=5pt] (c) at (234:4cm) {};
+  \node[draw=black,fill=bleuLaBRI,circle,inner sep=5pt] (d) at (306:4cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=5pt] (e) at (18:4cm) {};
+
+  \node[draw=black,line width = 3pt,fill=yellow,circle,inner sep=5pt]   (f) at (90:1.7cm) {};
+  \node[draw=black,fill=orange,circle,inner sep=5pt]  (g) at (180:1.7cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=5pt] (h) at (270:1.7cm) {};
+  \node[draw=black,fill=rougeLaBRI,circle,inner sep=5pt] (i) at (0:1.7cm) {};
+
+  \draw (a) -- (b) -- (c) -- (d) -- (e) -- (a);
+  \draw (f) -- (a)  (g) -- (b)  (i) -- (e);
+  \draw (g) -- (i) -- (d) -- (h) -- (c) -- (g) -- (f) -- (i) -- (h) -- (g);
+  \end{tikzpicture}
+  \end{column}
+  
+  \begin{column}{.49\textwidth}
+  \centering
+  \begin{tikzpicture}    
+  \clip (-5,5) rectangle (5,-5);
+  \node[draw=black,fill=orange,circle,inner sep=5pt]   (a) at (90:4cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=5pt]  (b) at (162:4cm) {};
+  \node[draw=black,line width = 3pt, fill=orange,circle,inner sep=5pt] (c) at (234:4cm) {};
+  \node[draw=black,fill=bleuLaBRI,circle,inner sep=5pt] (d) at (306:4cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=5pt] (e) at (18:4cm) {};
+
+  \node[draw=black,fill=bleuLaBRI,circle,inner sep=5pt]   (f) at (90:1.7cm) {};
+  \node[draw=black,line width = 3pt, fill=rougeLaBRI,circle,inner sep=5pt]  (g) at (180:1.7cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=5pt] (h) at (270:1.7cm) {};
+  \node[draw=black,line width = 3pt, fill=orange,circle,inner sep=5pt] (i) at (0:1.7cm) {};
+
+  \draw (a) -- (b) -- (c) -- (d) -- (e) -- (a);
+  \draw (f) -- (a)  (g) -- (b)  (i) -- (e);
+  \draw  (i) -- (d) -- (h) -- (c)  (g) -- (f) -- (i) -- (h) -- (g);
+  \draw[line width = 3pt] (c) -- (g) -- (i);
+  \end{tikzpicture}
+  \end{column}
+  \end{columns}
+  \vspace{1cm}
+  Kempe change: swap the colors in a maximal bichromatic connected subgraph
             
             \end{block}
             
             \vfill
             
-            \begin{block}{Content Delivery Networks (CDN)}
+            \begin{block}{Objectives and questions}
             
             \centering
-            
-            \includegraphics[width=.33\textwidth]{sample/CDN.png}
-            
-            \end{block}
-            
-            \vfill
-            
-            \begin{block}{HTTP Adaptive Streaming (HAS)}
-            
-            \centering
-            
-            \includegraphics[width=.925\textwidth]{sample/DASH-2.png}
-            
+            \begin{itemize}
+            \item Color a graph with as few colors as possible
+            \item 
+            \item 
+            \end{itemize}
             \end{block}
             
             \vfill
