--- a/poster_journee_EDMI/boilerplateSDSLaBRI.tex
+++ b/poster_journee_EDMI/boilerplateSDSLaBRI.tex
@@ -1,5 +1,5 @@
 \pdfobjcompresslevel=0
-\documentclass[final,hyperref={pdfpagelabels=false}]{beamer}
+\documentclass[final,hyperref={pdfpagelabels=false},xcolor=dvipsnames]{beamer}
 \usepackage[orientation=portrait,size=a0,scale=1.4]{beamerposter}
 \usepackage[utf8]{inputenc}
 \usepackage[sfdefault]{roboto}
