--- a/poster_journee_EDMI/main.tex
+++ b/poster_journee_EDMI/main.tex
@@ -60,16 +60,16 @@
   \centering
   \begin{tikzpicture}    
   \clip (-5,5) rectangle (5,-5);
-  \node[draw=black,fill=orange,circle,inner sep=5pt]   (a) at (90:4cm) {};
-  \node[draw=black,fill=yellow,circle,inner sep=5pt]  (b) at (162:4cm) {};
-  \node[draw=black,fill=rougeLaBRI,circle,inner sep=5pt] (c) at (234:4cm) {};
-  \node[draw=black,fill=bleuLaBRI,circle,inner sep=5pt] (d) at (306:4cm) {};
-  \node[draw=black,fill=yellow,circle,inner sep=5pt] (e) at (18:4cm) {};
+  \node[draw=black,fill=orange,circle,inner sep=6pt]   (a) at (90:4cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=6pt]  (b) at (162:4cm) {};
+  \node[draw=black,fill=rougeLaBRI,circle,inner sep=6pt] (c) at (234:4cm) {};
+  \node[draw=black,fill=bleuLaBRI,circle,inner sep=6pt] (d) at (306:4cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=6pt] (e) at (18:4cm) {};
 
-  \node[draw=black,fill=bleuLaBRI,circle,inner sep=5pt]   (f) at (90:1.7cm) {};
-  \node[draw=black,fill=orange,circle,inner sep=5pt]  (g) at (180:1.7cm) {};
-  \node[draw=black,fill=yellow,circle,inner sep=5pt] (h) at (270:1.7cm) {};
-  \node[draw=black,fill=rougeLaBRI,circle,inner sep=5pt] (i) at (0:1.7cm) {};
+  \node[draw=black,fill=bleuLaBRI,circle,inner sep=6pt]   (f) at (90:1.7cm) {};
+  \node[draw=black,fill=orange,circle,inner sep=6pt]  (g) at (180:1.7cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=6pt] (h) at (270:1.7cm) {};
+  \node[draw=black,fill=rougeLaBRI,circle,inner sep=6pt] (i) at (0:1.7cm) {};
 
   \draw (a) -- (b) -- (c) -- (d) -- (e) -- (a);
   \draw (f) -- (a)  (g) -- (b)  (i) -- (e);
@@ -81,26 +81,25 @@
   [Apple, Haken 1989] Every planar map (or graph) is 4-colorable
 \end{block}
             
-            \vfill
-            
-            \begin{block}{Kempe change}
-            
-            \centering
+\vfill
+
+\begin{block}{Kempe change}            
+  \centering
   \begin{columns}
   \begin{column}{.49\textwidth}
   \centering
   \begin{tikzpicture}    
   \clip (-5,5) rectangle (5,-5);
-  \node[draw=black,fill=orange,circle,inner sep=5pt]   (a) at (90:4cm) {};
-  \node[draw=black,fill=yellow,circle,inner sep=5pt]  (b) at (162:4cm) {};
-  \node[draw=black,fill=rougeLaBRI,circle,inner sep=5pt] (c) at (234:4cm) {};
-  \node[draw=black,fill=bleuLaBRI,circle,inner sep=5pt] (d) at (306:4cm) {};
-  \node[draw=black,fill=yellow,circle,inner sep=5pt] (e) at (18:4cm) {};
+  \node[draw=black,fill=orange,circle,inner sep=6pt]   (a) at (90:4cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=6pt]  (b) at (162:4cm) {};
+  \node[draw=black,fill=rougeLaBRI,circle,inner sep=6pt] (c) at (234:4cm) {};
+  \node[draw=black,fill=bleuLaBRI,circle,inner sep=6pt] (d) at (306:4cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=6pt] (e) at (18:4cm) {};
 
-  \node[draw=black,line width = 3pt,fill=yellow,circle,inner sep=5pt]   (f) at (90:1.7cm) {};
-  \node[draw=black,fill=orange,circle,inner sep=5pt]  (g) at (180:1.7cm) {};
-  \node[draw=black,fill=yellow,circle,inner sep=5pt] (h) at (270:1.7cm) {};
-  \node[draw=black,fill=rougeLaBRI,circle,inner sep=5pt] (i) at (0:1.7cm) {};
+  \node[draw=black,line width = 4pt,fill=yellow,circle,inner sep=6pt]   (f) at (90:1.7cm) {};
+  \node[draw=black,fill=orange,circle,inner sep=6pt]  (g) at (180:1.7cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=6pt] (h) at (270:1.7cm) {};
+  \node[draw=black,fill=rougeLaBRI,circle,inner sep=6pt] (i) at (0:1.7cm) {};
 
   \draw (a) -- (b) -- (c) -- (d) -- (e) -- (a);
   \draw (f) -- (a)  (g) -- (b)  (i) -- (e);
@@ -112,63 +111,164 @@
   \centering
   \begin{tikzpicture}    
   \clip (-5,5) rectangle (5,-5);
-  \node[draw=black,fill=orange,circle,inner sep=5pt]   (a) at (90:4cm) {};
-  \node[draw=black,fill=yellow,circle,inner sep=5pt]  (b) at (162:4cm) {};
-  \node[draw=black,line width = 3pt, fill=orange,circle,inner sep=5pt] (c) at (234:4cm) {};
-  \node[draw=black,fill=bleuLaBRI,circle,inner sep=5pt] (d) at (306:4cm) {};
-  \node[draw=black,fill=yellow,circle,inner sep=5pt] (e) at (18:4cm) {};
+  \node[draw=black,fill=orange,circle,inner sep=6pt]   (a) at (90:4cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=6pt]  (b) at (162:4cm) {};
+  \node[draw=black,line width = 4pt, fill=orange,circle,inner sep=6pt] (c) at (234:4cm) {};
+  \node[draw=black,fill=bleuLaBRI,circle,inner sep=6pt] (d) at (306:4cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=6pt] (e) at (18:4cm) {};
 
-  \node[draw=black,fill=bleuLaBRI,circle,inner sep=5pt]   (f) at (90:1.7cm) {};
-  \node[draw=black,line width = 3pt, fill=rougeLaBRI,circle,inner sep=5pt]  (g) at (180:1.7cm) {};
-  \node[draw=black,fill=yellow,circle,inner sep=5pt] (h) at (270:1.7cm) {};
-  \node[draw=black,line width = 3pt, fill=orange,circle,inner sep=5pt] (i) at (0:1.7cm) {};
+  \node[draw=black,fill=bleuLaBRI,circle,inner sep=6pt]   (f) at (90:1.7cm) {};
+  \node[draw=black,line width = 4pt, fill=rougeLaBRI,circle,inner sep=6pt]  (g) at (180:1.7cm) {};
+  \node[draw=black,fill=yellow,circle,inner sep=6pt] (h) at (270:1.7cm) {};
+  \node[draw=black,line width = 4pt, fill=orange,circle,inner sep=6pt] (i) at (0:1.7cm) {};
 
   \draw (a) -- (b) -- (c) -- (d) -- (e) -- (a);
   \draw (f) -- (a)  (g) -- (b)  (i) -- (e);
   \draw  (i) -- (d) -- (h) -- (c)  (g) -- (f) -- (i) -- (h) -- (g);
-  \draw[line width = 3pt] (c) -- (g) -- (i);
+  \draw[line width = 4pt] (c) -- (g) -- (i);
   \end{tikzpicture}
   \end{column}
   \end{columns}
   \vspace{1cm}
-  Kempe change: swap the colors in a maximal bichromatic connected subgraph
+  Swap the colors in a maximal bichromatic connected subgraph
             
-            \end{block}
+\end{block}
+            
+\vfill
+            
+\begin{block}{Objectives and questions}
+            
+\centering
+\begin{itemize}
+\item Color a graph  with as few colors as possible
+\item Study of the reconfiguration graph\\ {\small Vertices: $k$-colorings of a
+  graph $G$, edge if Kempe change between two colorings}
+\begin{itemize}
+\item Connectivity 
+\item Diameter
+\item Complexity of reachability problem
+\end{itemize}
+\item Sampling colorings
+\end{itemize}
+\end{block}
+            
+            \vfill
+
+\begin{block}{Color a graph with as few colors as possible}
+Every planar graph is 5-colorable
+
+\centering
+\begin{columns}
+\begin{column}{.33\textwidth}
+\centering
+\begin{tikzpicture}
+\clip (-4,4) rectangle (4,-4.5);
+    \node[draw=black,fill=orange,circle,inner sep=6pt]   (a) at (90:3cm) {};
+          \node[draw=black,fill=rougeLaBRI,circle,inner sep=6pt]  (b) at (162:3cm) {};
+          \node[draw=black,fill=yellow,circle,inner sep=6pt] (c) at (234:3cm) {};
+          \node[draw=black,fill=bleuLaBRI,circle,inner sep=6pt] (d) at (306:3cm) {};
+          \node[draw=black,fill=black,circle,inner sep=6pt] (e) at (18:3cm) {};
+          \node[draw=black,fill=white,circle,inner sep=6pt] (A) at (0,0) {};
+          
+          
+          \draw (a) -- (b) -- (c) -- (d) -- (e) -- (a);
+          \draw (b) -- (A) -- (a) (c) -- (A) -- (d) (A) --(e);
+\end{tikzpicture}
+\end{column}
+$\rightarrow$
+\begin{column}{.33\textwidth}
+\centering
+\begin{tikzpicture}
+\clip (-4,4) rectangle (4,-4.5);
+    \node[draw=black,fill=orange,circle,inner sep=6pt]   (a) at (90:3cm) {};
+          \node[draw=black,fill=rougeLaBRI,circle,inner sep=6pt]  (b) at (162:3cm) {};
+          \node[draw=black,fill=yellow,circle,inner sep=6pt] (c) at (234:3cm) {};
+          \node[draw=black,fill=bleuLaBRI,circle,inner sep=6pt] (d) at (306:3cm) {};
+          \node[draw=black,line width=4pt,fill=yellow,circle,inner sep=6pt] (e) at (18:3cm) {};
+          \node[draw=black,fill=black,circle,inner sep=6pt] (A) at (0,0) {};
+          
+          
+          \draw (a) -- (b) -- (c) -- (d) -- (e) -- (a);
+          \draw (b) -- (A) -- (a) (c) -- (A) -- (d) (A) --(e);
+\end{tikzpicture}
+\end{column}
+or
+\begin{column}{.33\textwidth}
+\centering
+\begin{tikzpicture}
+\clip (-4,4) rectangle (4,-4.5);
+    \node[draw=black,fill=orange,circle,inner sep=6pt]   (a) at (90:3cm) {};
+          \node[draw=black,line width = 4pt,fill=bleuLaBRI,circle,inner sep=6pt]  (b) at (162:3cm) {};
+          \node[draw=black,fill=yellow,circle,inner sep=6pt] (c) at (234:3cm) {};
+          \node[draw=black,fill=bleuLaBRI,circle,inner sep=6pt] (d) at (306:3cm) {};
+          \node[draw=black,fill=black,circle,inner sep=6pt] (e) at (18:3cm) {};
+          \node[draw=black,fill=rougeLaBRI,circle,inner sep=6pt] (A) at (0,0) {};
+          \node (D1) at (286:6cm) {};
+          \node (D2) at (326:6cm) {};
+          
+          \draw (a) -- (b) -- (c) -- (d) -- (e) -- (a);
+          \draw (b) -- (A) -- (a) (c) -- (A) -- (d) (A) --(e);
+          \draw[dashed] (c) .. controls (D1) and (D2) .. (e);
+\end{tikzpicture}
+\end{column}
+\end{columns}
+
+\end{block}
             
             \vfill
             
-            \begin{block}{Objectives and questions}
-            
-            \centering
-            \begin{itemize}
-            \item Color a graph with as few colors as possible
-            \item 
-            \item 
-            \end{itemize}
-            \end{block}
-            
-            \vfill
-            
-            \begin{block}{MS-Stream: Multi-Source Streaming over HTTP}
-            
-            \centering
-            
-            \includegraphics[width=.925\textwidth]{sample/msstream_archi.pdf}
-            
-            \includegraphics[width=.925\textwidth]{sample/chunk2.pdf}
-            
-            \end{block}
-            
-            \vfill
-            
-            \begin{block}{Problem statement}
-            
-            \centering
-            
-            \includegraphics[width=.5\textwidth]{sample/SotA-cropped.pdf}
-            
-            \end{block}
-            
+\begin{block}{Connectivity of the reconfiguration graph}
+[Meyniel 1989] For all planar graph $G$, all the 5-colorings of $G$ are Kempe
+equivalent
+
+\vspace{.5cm}
+False for 4-colorings because of frozen colorings :
+
+\centering
+ \begin{columns}
+    \begin{column}{.49\textwidth}
+    \centering
+      \begin{tikzpicture}
+        \node[draw=black,fill=orange,circle,inner sep=6pt]   (a) at (45:3cm) {};
+        \node[draw=black,fill=bleuLaBRI,circle,inner sep=6pt]  (b) at (135:3cm) {};
+        \node[draw=black,fill=yellow,circle,inner sep=6pt] (c) at (225:3cm) {};
+        \node[draw=black,fill=rougeLaBRI,circle,inner sep=6pt] (d) at (315:3cm) {};
+        \node[draw=black,fill=rougeLaBRI,circle,inner sep=6pt] (B) at (135:1.5cm) {};
+        \node[draw=black,fill=bleuLaBRI,circle,inner sep=6pt] (D) at (315:1.5cm) {};
+        \node[draw=black,fill=yellow,circle,inner sep=6pt] (A) at (45:5.4cm) {};
+        \node[draw=black,fill=orange,circle,inner sep=6pt] (C) at (225:5.4cm) {};
+        \node (D') at (315:6cm) {};
+        
+        \draw (a) -- (b) -- (c) -- (d) -- (a) -- (A) -- (b) -- (B) -- (D) -- (d)
+        -- (A);
+        \draw (c) -- (B) -- (a) -- (D) -- (c) -- (C)  (b) -- (C) -- (d) ;
+        \draw (A) .. controls (D') ..  (C);
+      \end{tikzpicture}
+    \end{column}
+    \hfill
+    
+    \begin{column}{.49\textwidth}
+    \centering
+      \begin{tikzpicture}
+        \node[draw=black,fill=orange,circle,inner sep=6pt]   (a) at (45:3cm) {};
+        \node[draw=black,fill=bleuLaBRI,circle,inner sep=6pt]  (b) at (135:3cm) {};
+        \node[draw=black,fill=orange,circle,inner sep=6pt] (c) at (225:3cm) {};
+        \node[draw=black,fill=bleuLaBRI,circle,inner sep=6pt] (d) at (315:3cm) {};
+        \node[draw=black,fill=rougeLaBRI,circle,inner sep=6pt] (B) at (135:1.5cm) {};
+        \node[draw=black,fill=yellow,circle,inner sep=6pt] (D) at (315:1.5cm) {};
+        \node[draw=black,fill=yellow,circle,inner sep=6pt] (A) at (45:5.4cm) {};
+        \node[draw=black,fill=rougeLaBRI,circle,inner sep=6pt] (C) at (225:5.4cm) {};
+        \node (D') at (315:6cm) {};
+        
+        \draw (a) -- (b) -- (c) -- (d) -- (a) -- (A) -- (b) -- (B) -- (D) -- (d)
+        -- (A);
+        \draw (c) -- (B) -- (a) -- (D) -- (c) -- (C)  (b) -- (C) -- (d) ;
+        \draw (A) .. controls (D') ..  (C);
+      \end{tikzpicture}
+    \end{column}
+  \end{columns}
+\end{block}
+         
           }
         \end{minipage}
       \end{beamercolorbox}
@@ -178,59 +278,11 @@
         \begin{minipage}[T]{.95\textwidth}
           \parbox[t][\columnheight]{\textwidth}{
             
-            \begin{block}{ idea}
-            
-            \begin{itemize}
-            
-            \item Reliability, QoE and scalability
-            
-            MS-Stream: Multiple-Source adaptive streaming over HTTP
-            
-            \item Incentive to contribute
-            
-            Rewarding: contributing users get a higher quality
-            
-            \item End-users privacy
-            
-            TEE (SGX): encryption, NAT and anonymity
-            
-            \end{itemize}
-            
+            \begin{block}{Diameter of the reconfiguration graph}
+            [Deschamps, Feghali, Kardoš, L-D., Pierron 22] All the 5-colorings
+            of a planar graph are equivalent up to $O(n^{195})$ Kempe changes 
             \end{block}
             
-            \vfill
-            
-            \begin{block}{ overview}
-            
-            \centering
-            
-            \includegraphics[width=.925\textwidth]{sample/BP.pdf}
-            
-            \end{block}
-            
-            \vfill
-            
-            \begin{block}{ technical description}
-            
-            \centering
-            
-            \includegraphics[width=.8\textwidth]{sample/PS-tech.png}
-            
-            \end{block}
-            
-            \vfill
-            
-            \begin{block}{ early results}
-            
-            \centering
-            
-            Experiment: Four clients joining the system sequentially
-            
-            \includegraphics[width=.925\textwidth]{sample/startup.pdf}
-            
-            Startup delay (s) - MS-Stream (top) vs (bottom)
-            
-            \end{block}
             
           }
         \end{minipage}
